Fix style of dashlet window boxes (title overlapped right hand side) without preventing overflow which we need for the large tooltips.

--- a/styles/kriplyana/kriplyana.css
+++ b/styles/kriplyana/kriplyana.css
@@ -46,27 +46,30 @@ div.windowbox
 {
     background: #FBFCFD;
     border: 1px solid #7F8394;
-    padding:0px;
+    padding: 0px;
+    border-radius: 4px;
     -moz-border-radius: 4px;
     -khtml-border-radius: 4px;  border-radius: 4px;
+    /*overflow: hidden;*/
 }
 div.windowtitle
 {
-    margin: 0px;
+  margin: 0px;
   background: #4B5B94;
   color: white;
-  border-bottom: 1px solid #C3C3C3;
-  width: 100%;
+  -moz-border-radius-topright: 4px;
+  border-top-right-radius: 4px;
+  padding-right: 0px;
 }
 .windowtitle a, .windowtitle a:hover { color: white; font-weight: normal;}
 
 div.windowtitle img { vertical-align: -30%; }
 div.window
 {
-    width: 98%;
-    background: #F6F8F9;
-        -moz-border-radius: 4px;
-    -khtml-border-radius: 4px;  border-radius: 4px;
+  background: #F6F8F9;
+  -moz-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
 }
 
 
